CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(oce-bundle)

# Define helper macro OPTION_WITH_DEFAULT
MACRO( OPTION_WITH_DEFAULT OPTION_NAME OPTION_STRING OPTION_DEFAULT )
	IF( NOT DEFINED ${OPTION_NAME} )
		SET( ${OPTION_NAME} ${OPTION_DEFAULT} )
	ENDIF( NOT DEFINED ${OPTION_NAME} )
	OPTION( ${OPTION_NAME} "${OPTION_STRING}" ${${OPTION_NAME}} )
ENDMACRO( OPTION_WITH_DEFAULT OPTION_NAME OPTION_STRING OPTION_DEFAULT )

OPTION_WITH_DEFAULT(OCEBUNDLE_SHARED_LIBS "Builds shared libraries" ON)
OPTION_WITH_DEFAULT(OCEBUNDLE_BUILD_FREETYPE "Builds the freetype library" ON)
OPTION_WITH_DEFAULT(OCEBUNDLE_BUILD_FREEIMAGE "Builds FreeImage library" ON)
OPTION_WITH_DEFAULT(OCEBUNDLE_BUILD_GL2PS "Builds gl2ps library" ON)
OPTION_WITH_DEFAULT(OCEBUNDLE_AUTO_INSTALL "Install the bundle libraries along the OCE install" ON)
OPTION_WITH_DEFAULT(OCEBUNDLE_ADD_OCE "Adds the OCE project from the OCE subdir (disable when using in a different tree)" OFF)

SET(CMAKE_DEBUG_POSTFIX "d")

IF(OCEBUNDLE_SHARED_LIBS)
	SET(OCEBUNDLE_ADD_LIB_PREFIX "SHARED")
ENDIF()

SET(OCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/oce/)
SET(FT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/freetype)
SET(GL2PS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/gl2ps)
SET(FREEIMAGE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/FreeImage)
SET(LIBPNG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/FreeImage/Source/LibPNG/)
SET(ZLIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/FreeImage/Source/zlib/)

IF (${CMAKE_SIZEOF_VOID_P} MATCHES "8") # It is 64bit, otherwise 32 bit systems match 4
	ADD_DEFINITIONS(-D_OCC64)
	SET(BIT 64)
ELSE (${CMAKE_SIZEOF_VOID_P} MATCHES "8")
  SET(BIT 32)
ENDIF(${CMAKE_SIZEOF_VOID_P} MATCHES "8")

SET( OCE_WIN_BUNDLE_INSTALL_DIR ${OCE_WIN_BUNDLE_INSTALL_DIR} CACHE
	PATH "Install prefix prepended to target to create install location" )

SET( OCE_WIN_BUNDLE_INSTALL_DIR_BITS ${OCE_WIN_BUNDLE_INSTALL_DIR}/)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(ARCHIVE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(freetype.cmake)
ADD_SUBDIRECTORY(gl2ps.cmake)
ADD_SUBDIRECTORY(FreeImage.cmake)

SET(FREETYPE_INCLUDE_DIR_freetype2 ${CMAKE_CURRENT_SOURCE_DIR}/libs/freetype CACHE PATH "" FORCE)
SET(FREETYPE_INCLUDE_DIR_ft2build ${CMAKE_CURRENT_SOURCE_DIR}/libs/freetype/include CACHE PATH "" FORCE)
SET(FREETYPE_INCLUDE_DIRS ${FREETYPE_INCLUDE_DIR_freetype2} ${FREETYPE_INCLUDE_DIR_ft2build})
SET(FREETYPE_LIBRARY ${ARCHIVE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/freetype.lib CACHE FILEPATH "" FORCE)
SET(FREETYPE_LIBRARIES ${ARCHIVE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/freetype.lib CACHE FILEPATH "" FORCE)
SET(FREETYPE_LIBRARY_DEBUG ${ARCHIVE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/freetyped.lib CACHE FILEPATH "" FORCE)

SET(GL2PS_LIBRARY ${ARCHIVE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/gl2ps.lib CACHE FILEPATH "" FORCE)
SET(GL2PS_LIBRARY_DEBUG ${ARCHIVE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/gl2psd.lib CACHE FILEPATH "" FORCE)
SET(GL2PS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}//libs/gl2ps CACHE PATH "" FORCE)

SET(FREEIMAGE_LIBRARY ${ARCHIVE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/FreeImage.lib CACHE FILEPATH "" FORCE)
SET(FREEIMAGE_LIBRARY_DEBUG ${ARCHIVE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/FreeImaged.lib CACHE FILEPATH "" FORCE)

GET_TARGET_PROPERTY( FREEIMAGEPLUS_ARCHIVE_OUTPUT_DIRECTORY FreeImage ARCHIVE_OUTPUT_DIRECTORY )
SET(FREEIMAGEPLUS_LIBRARY ${ARCHIVE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/FreeImagePlus.lib CACHE FILEPATH "" FORCE)
SET(FREEIMAGEPLUS_LIBRARY_DEBUG ${ARCHIVE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/FreeImagePlusd.lib CACHE FILEPATH "" FORCE)
SET(FREEIMAGE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/FreeImage/Source ${CMAKE_CURRENT_SOURCE_DIR}/libs/FreeImage/Wrapper/FreeImagePlus CACHE PATH "" FORCE)

IF(OCEBUNDLE_ADD_OCE)
	ADD_SUBDIRECTORY(${OCE_DIR})
ENDIF()

# TODO target dependencies
# Add dependencies between OCE and oce-win-bundle
#add_dependencies( TKService freetype FreeImage )
#add_dependencies( TKOpenGl gl2ps )

############ TODO INSTALL
#IF( NOT DEFINED OCE_BUNDLE_INSTALL_DIR )
#	SET( OCE_WIN_BUNDLE_INSTALL_DIR "${OCE_INSTALL_DIR}")
#ENDIF( )

#INSTALL(FILES ${fip_headers} ${freeimage_headers} DESTINATION ${OCE_WIN_BUNDLE_INSTALL_DIR}/include/FreeImage)

#INSTALL(TARGETS FreeImage
#		ARCHIVE DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/lib/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
#		LIBRARY DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/lib/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
#		RUNTIME DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/bin/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
#		)
#
#INSTALL(TARGETS FreeImagePlus
#		ARCHIVE DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/lib/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
#		LIBRARY DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/lib/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
#		RUNTIME DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/bin/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
#		)

#INSTALL (FILES ${freetype_headers} DESTINATION ${OCE_WIN_BUNDLE_INSTALL_DIR}/include/freetype )
#INSTALL (FILES ${freetype_headers_ft} DESTINATION ${OCE_WIN_BUNDLE_INSTALL_DIR}/include/freetype/freetype )
#INSTALL (FILES ${freetype_headers_config} DESTINATION ${OCE_WIN_BUNDLE_INSTALL_DIR}/include/freetype/freetype/config )
#INSTALL (FILES ${freetype_headers_int} DESTINATION ${OCE_WIN_BUNDLE_INSTALL_DIR}/include/freetype/freetype/internal )


#INSTALL(TARGETS freetype
#		ARCHIVE DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/lib/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
#		LIBRARY DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/lib/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
#		RUNTIME DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/bin/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
#		)


#INSTALL(FILES ${GL2PS_DIR}/gl2ps.h DESTINATION ${OCE_WIN_BUNDLE_INSTALL_DIR}/include/gl2ps)

#INSTALL(TARGETS gl2ps
#		ARCHIVE DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/lib/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
#		LIBRARY DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/lib/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
#		RUNTIME DESTINATION  "${OCE_WIN_BUNDLE_INSTALL_DIR_BITS}/bin/" CONFIGURATIONS Debug Release MinSizeRel RelWithDebInfo
#		)
