CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

####### GL2PS
PROJECT(GL2PS)
ADD_DEFINITIONS("-DGL2PSDLL")
ADD_DEFINITIONS("-DGL2PSDLL_EXPORTS")
ADD_DEFINITIONS("-D_USE_MATH_DEFINES")
ADD_DEFINITIONS("-DGL2PS_HAVE_LIBPNG")
ADD_DEFINITIONS("-DGL2PS_HAVE_ZLIB")
ADD_DEFINITIONS("-D_CRT_SECURE_NO_DEPRECATE")
ADD_DEFINITIONS("-D_CRT_NONSTDC_NO_WARNINGS")

INCLUDE_DIRECTORIES(${LIBPNG_DIR})
INCLUDE_DIRECTORIES(${ZLIB_DIR})

FILE(GLOB png_files ${LIBPNG_DIR}/*.c)
FILE(GLOB zlib_files ${ZLIB_DIR}/*.c)
LIST(REMOVE_ITEM zlib_files "${ZLIB_DIR}/example.c")
LIST(REMOVE_ITEM zlib_files "${ZLIB_DIR}/minigzip.c")
LIST(REMOVE_ITEM zlib_files "${LIBPNG_DIR}/pngtest.c")

IF(WIN32)
    LINK_LIBRARIES("opengl32")
ENDIF()
ADD_LIBRARY (gl2ps ${OCEBUNDLE_ADD_LIB_PREFIX} ${GL2PS_DIR}/gl2ps.c ${png_files} ${zlib_files})

